# shark2mqtt

./: .gitignore  CLAUDE.md  CONFIRMED_MODELS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-publish.yml  tests.yml
src/: ayla_api.py  const.py  main.py  mqtt_client.py  shark_auth.py  shark_device.py  skegox_api.py
tests/: conftest.py  test_ayla_api.py  test_command_event_integration.py  test_config.py  test_main.py  test_mqtt_client.py  test_poll_loop.py  test_shark_auth.py
