[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shark2mqtt"
version = "0.1.0"
description = "Bridge SharkNinja robot vacuums to Home Assistant via MQTT autodiscovery"
authors = [
    {name = "Cam Soper", email = "cam.soper@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "aiomqtt>=2.0,<3",
    "patchright>=1.58",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "tenacity>=8.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[project.scripts]
shark2mqtt = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/.venv/*"]
