[metadata]
name = shark2mqtt
version = 0.1.0
description = Bridge SharkNinja robot vacuums to Home Assistant via MQTT autodiscovery
author = Cam Soper
author_email = cam.soper@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camsoper/shark2mqtt

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    aiohttp>=3.9,<4
    aiomqtt>=2.0,<3
    patchright>=1.58
    pydantic>=2.0,<3
    pydantic-settings>=2.0,<3
    tenacity>=8.0,<10

[options.entry_points]
console_scripts =
    shark2mqtt = src.main:main

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.0,<9
    pytest-asyncio>=0.24,<1

